# mesh

./: .biomeignore  .gitignore  AGENTS.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: biome.yml
scripts/: install-git-hooks.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  projects.rs
src/app/: App.tsx  AppShell.test.tsx  AppShell.tsx  navigation.test.ts  navigation.ts  use-workspace-data.test.tsx  use-workspace-data.ts
src/components/ui/: badge.tsx  button.tsx  cx.ts  empty-state.tsx  input.tsx  modal.tsx  panel.tsx  sidebar-item.tsx  status-dot.tsx  tabs.tsx  toolbar.tsx
src/data/: models.ts  repositories.test.ts  repositories.ts
src/domain/: model-registry.test.ts  model-registry.ts  status.test.ts  status.ts  types.ts
src/features/command-center/: CommandCenterPage.tsx
src/features/models/: AddModelModal.interaction.test.tsx  AddModelModal.test.tsx  AddModelModal.tsx  ModelsPage.interaction.test.tsx  ModelsPage.test.tsx  ModelsPage.tsx
src/features/placeholders/: PlaceholderPage.tsx
src/features/projects/: ConnectProjectModal.interaction.test.tsx  ConnectProjectModal.test.tsx  ConnectProjectModal.tsx  ProjectsPage.test.tsx  ProjectsPage.tsx
src/mocks/: mesh-fixtures.ts
src/platform/: models.test.ts  models.ts  projects.test.ts  projects.ts
src/styles/: app.css
(+7 files in other folders)
