[package]
name = "mesh"
version = "0.1.0"
description = "Local-first desktop workbench for orchestrating projects, agents, runs, and model context."
authors = ["shayn"]
edition = "2021"

[lib]
name = "mesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
rfd = "0.15.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
