[package]
name = "mesh"
version = "0.1.0"
description = "Local-first desktop workbench for orchestrating projects, agents, runs, and model context."
authors = ["shayn"]
edition = "2021"

[lib]
name = "mesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
rfd = "0.17.2"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.0", features = [] }
